reverted widths and added overlay-y CSS hack to stop scrollbars messing with centering

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -7,6 +7,7 @@ body {
   font: 14px "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
   font-weight:400;
+  overflow-y: overlay;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -226,7 +227,7 @@ footer {
   .width:100%;
 }
 
-@media print, screen and (max-width: 1920px) {
+@media print, screen and (max-width: 1050px) {
 
   div.wrapper {
     width:auto;
@@ -261,7 +262,7 @@ footer {
   }
 }
 
-@media print, screen and (max-width: 1920px) {
+@media print, screen and (max-width: 1050px) {
   body {
     word-wrap:break-word;
   }
